install-all bash script support H2 database (#443)